<resources>
    <string name="app_name">KeepCalm</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name_user">User</string>
    <string name="email_user">E-mail</string>
    <string name="desc_img_user">Descrição</string>

    <string name="menu_chat_medico">Conversar com médico</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_respirar">Mindfulness</string>
    <string name="menu_graficos">Graficos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_pessoas">Pessoas</string>
    <string name="menu_avisos">Avisos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
